@@ -1,3 +1,10 @@
+Tue Sep 03 16:54:08 1996    <layer@HOBART>
+
+	* fi-site-init.el: change the way eli is loaded, so that load-path
+	  doesn't have to be changed.  (load "..../fi-site-init.el") is now
+	  all that is needed.
+	* fi-subproc.el: more misc fixes fi:common-lisp-socket.
+
 Fri Aug 30 11:01:15 1996    <layer@HOBART>
 
 	* clman.c: for Windows
